# claude-hook-advisor

./: .cocogitto-readme.md  .gitignore  AGENTS.md  Cargo.toml  FAQ.md  GEMINI.md  LICENSE-APACHE  LICENSE-MIT  MARKETPLACE.md  Makefile  README.md  cog.toml  example.claude-hook-advisor.toml  phase-3-integration-prompt.txt  prompt.txt  setup-coco-aliases.sh  test-config.toml
.claude-plugin/: marketplace.json
claude-doc-advisor/: Cargo.toml
claude-doc-advisor/src/: error.rs  lib.rs  parsing.rs  standards.rs  validator.rs
docs/: README.md  SPEC-KIT-LEARNINGS.md  SPEC-KIT-REPLICATION-PLAN.md  claude-doc-advisor-implementation-plan.md  claude-doc-advisor-session-prompt.txt  claude-integration.md  configuration.md  directory-aliasing.md  feature-toggles-plan.md  hashtag-search-integration-plan.md  hook-enhancement-ideas.md  hooks-guide-analysis.md  installation.md  overview.md
plugin/: .claude-hook-advisor.toml.example  INSTALL-CHECKLIST.md  README.md  STRUCTURE.md  install.sh
plugin/.claude-plugin/: plugin.json
plugin/commands/: history-failures.md  history-search.md  history-session.md  history.md  validate.md
plugin/hooks/: hooks.json
src/: cli.rs  config.rs  directory.rs  history.rs  hooks.rs  installer.rs  lib.rs  main.rs  patterns.rs  security.rs  types.rs
tests/: directory_integration_test.rs  integration_test.rs
