[package]
name = "claude-hook-advisor"
version = "0.2.0"
edition = "2021"
authors = ["Navishkar Rao <sirmews@gmail.com>"]
description = "Intelligent command suggestion system for Claude Code with natural language learning, confidence tracking, and execution analytics"
homepage = "https://github.com/sirmews/claude-hook-advisor"
repository = "https://github.com/sirmews/claude-hook-advisor"
license = "MIT OR Apache-2.0"
keywords = ["claude", "cli", "prompt", "llm", "ai"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.8", features = ["preserve_order"] }
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"
