[package]
name = "claude-doc-advisor"
version = "0.1.0"
edition = "2021"
authors = ["Navishkar Rao <sirmews@gmail.com>"]
description = "Documentation standards enforcement library for Claude Code integration"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
test-case = "3.0"

[lints]
workspace = true